<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="7dp"
    android:paddingLeft="7dp"
    android:paddingBottom="7dp"
    android:paddingRight="7dp"

    tools:context=".MainActivity">

    <TextView
       android:id="@+id/teststyle1_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teststyle1"
        android:textSize="24dp"
        android:textColor="@color/pink"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/teststyle1_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stylebutton1"
        android:textSize="24dp"
        android:backgroundTint="@color/pink"
        app:layout_constraintTop_toBottomOf="@id/teststyle1_TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/teststyle2_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teststyle2"
        android:background="@color/yellow"
        android:alpha="0.5"
        android:textSize="13dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        style="@style/NewStyleButton"
        android:id="@+id/teststyle2_Button"
        android:layout_width="0"
        android:layout_height="wrap_content"
        android:text="@string/stylebutton2"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/teststyle2_TextView"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/teststyle3_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teststyle3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/teststyle3_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stylebutton3"
        style="@style/NewStyleButton"
        android:textColor="@color/yellow"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/teststyle2_TextView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="33dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>